--- a/saveURLMobile/package.json
+++ b/saveURLMobile/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vite": "latest"
+    "vite": "latest",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {}
 }
